# shader-crusher

./: Cargo.toml  Justfile  README.md  TODO.md  build.rs  cbindgen.toml  update_64_osx-debug.sh
.github/workflows/: publish_crate.yml  rust-linux.yml  rust-macos.yml  rust-windows.yml  rust.yml
data/: test_parenthesis_arithmetic.glsl  test_parenthesis_conditionals.glsl  test_parenthesis_field_access.glsl  test_parenthesis_nested.glsl  test_parenthesis_unary.glsl
src/: glsl_keywords.txt  lib.rs  main.rs
src/shader_crusher/: mod.rs  shadercrusher.rs
