[package]
name = "shader-crusher"
version = "0.1.3"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
description = "A little helper to optimize glsl shaders for size."
readme = "README.md"
homepage = "https://github.com/AndreasOM/shader-crusher"
repository = "https://github.com/AndreasOM/shader-crusher"
keywords = ["tools", "gamedev"]
categories = ["command-line-utilities","compression","graphics"]

[[bin]]
name="shader-crusher"
path="src/main.rs"

[lib]
# crate-type = ["rlib", "staticlib"]
# crate-type = ["cdylib"]
crate-type = ["rlib", "staticlib", "dylib"]

[dependencies]
clap = { version= "2.33" }
entropy = { version="0.3.0" }
glsl = { version="~4.0" }
libc = { version="0.2.93" }
regex = { version="1.4" }

[build-dependencies]

[replace]
#"glsl:4.0.0" = { path = 'vendor/glsl' }
