[package]
name = "shader-crusher"
version = "0.5.0-alpha"
authors = ["Andreas Neukoetter <andreas@omni-mad.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
license = "MIT"
description = "A little helper to optimize glsl shaders for size."
readme = "README.md"
homepage = "https://github.com/AndreasOM/shader-crusher"
repository = "https://github.com/AndreasOM/shader-crusher"
keywords = ["tools", "gamedev"]
categories = ["command-line-utilities","compression","graphics"]

[[bin]]
name="shader-crusher"
path="src/main.rs"

[lib]
# crate-type = ["rlib", "staticlib"]
# crate-type = ["cdylib"]
# crate-type = ["rlib", "staticlib", "dylib"]

[dependencies]
clap = { version= "4.5" }
entropy = { version="0.4.1" }
glsl = { version="7.0" }
libc = { version="0.2.132" }
regex = { version="1.6.0" }

[build-dependencies]

[replace]
#"glsl:4.0.0" = { path = 'vendor/glsl' }
